--- a/docs/basics.adoc
+++ b/docs/basics.adoc
@@ -1,5 +1,6 @@
 = The Basics
 :experimental:
+:imagesdir: images
 
 In this step, you will create a straightforward application serving a `hello` endpoint. To demonstrate dependency injection this endpoint uses a `greeting` bean.
 
