--- a/docs/security.adoc
+++ b/docs/security.adoc
@@ -1,5 +1,6 @@
 = Securing Quarkus APIs
 :experimental:
+:imagesdir: images
 
 Bearer Token Authorization is the process of authorizing HTTP requests based on the existence and validity of a bearer token representing a subject and her access context, where the token provides valuable information to determine the subject of the call as well whether or not a HTTP resource can be accessed. This is commonly used in OAuth-based identity and access management systems like https://keycloak.org[Keycloak^], a popular open source project. In this exercise we'll show you how to use https://github.com/eclipse/microprofile-jwt-auth/releases/download/1.1.1/microprofile-jwt-auth-spec.pdf[Microprofile JSON Web Token (JWT) RBAC^], https://keyloak.org[Keycloak^] and https://en.wikipedia.org/wiki/OAuth[OAuth^] to secure your Quarkus applications.
 
