--- a/docs/testing.adoc
+++ b/docs/testing.adoc
@@ -110,7 +110,7 @@ Now re-run the tests (click on **Run Tests** again) and look for
 
 [source, none]
 ----
-INFO  [io.quarkus] (main) Quarkus x.xx.x.Final started in 1.131s. Listening on: http://0.0.0.0:8083
+INFO  [io.quarkus] (main) Quarkus xx.xx.xx on JVM started in 1.286s. Listening on: http://localhost:8083
 ----
 
 Notice the port `8083`.
