--- a/docs/deploy.adoc
+++ b/docs/deploy.adoc
@@ -10,17 +10,15 @@ OpenShift is a commercially supported distribution of Kubernetes from Red Hat. T
 
 == Login to OpenShift
 
-Although your Eclipse Che workspace is running on the Kubernetes cluster, it's running with a default restricted _Service Account_ that prevents you from creating most resource types. So we'll log in with your workshop user. Click on **Login to OpenShift**, and enter your given credentials:
+Although your Eclipse Che workspace is running on the Kubernetes cluster, it's running with a default restricted _Service Account_ that prevents you from creating most resource types. So we'll log in with your workshop user. Click on *Login to OpenShift*:
 
-* Username: **`{{ USER_ID }}`**
-* Password: **`{{ OPENSHIFT_USER_PASSWORD }}`**
+[NOTE]
+====
+When you click on this, CodeReady Workspaces executes the following command:
+*oc login https://$KUBERNETES_SERVICE_HOST:$KUBERNETES_SERVICE_PORT --insecure-skip-tls-verify=true --username={{ USER_ID }} --password={{ OPENSHIFT_USER_PASSWORD }}*
+====
 
 image::cmd-login.png[login,700]
-
-[WARNING]
-====
-Use the username and password you were assigned by the instructor.
-====
 
 You should see:
 
@@ -78,17 +76,18 @@ Next, add the following variables in `src/main/resources/application.properties`
 %prod.quarkus.kubernetes-client.trust-certs=true<1>
 %prod.quarkus.kubernetes.deploy=true<2>
 %prod.quarkus.kubernetes.deployment-target=openshift<3>
-%prod.quarkus.openshift.expose=true<4>
-%prod.quarkus.native.container-build=true<5>
-%prod.quarkus.openshift.build-strategy=docker<6>
+%prod.quarkus.openshift.build-strategy=docker<4>
+%prod.quarkus.openshift.expose=true<5>
+
 ----
 
 <1> We are using self-signed certs in this simple example, so this simply says to the extension to trust them.
 <2> Instructs the extension to deploy to OpenShift after the container image is built
 <3> Instructs the extension to generate and create the OpenShift resources (like `DeploymentConfig` and `Service`) after building the container
-<4> Instructs the extension to generate an OpenShift `Route`.
-<5> Build a native binary executable using the mandrel build image by default
-<6> Set the Docker build strategy. This strategy builds the artifacts (JAR files or a native executable) outside the OpenShift cluster, either locally or in a CI environment, and then provides them to the OpenShift build system together with a Dockerfile. The container is built inside the OpenShift cluster and provided as an image stream.
+<4> Set the Docker build strategy
+<5> Instructs the extension to generate an OpenShift `Route`
+
+*Docker build* strategy builds the artifacts (JAR files or a native executable) outside the OpenShift cluster, either locally or in a CI environment, and then provides them to the OpenShift build system together with a Dockerfile. The container is built inside the OpenShift cluster and provided as an image stream.
 
 Rebuild and re-deploy the people application via running the following maven plugin in CodeReady Workspaces Terminal:
 
