--- a/docs/panache.adoc
+++ b/docs/panache.adoc
@@ -19,7 +19,7 @@ You may have wondered why we are using `people` in our Java APIs, and now you'll
 
 [source,sh,role="copypaste"]
 ----
-mvn -q quarkus:add-extension -Dextensions="hibernate-orm-panache, jdbc-h2, jdbc-postgresql, resteasy-jsonb" -f $CHE_PROJECTS_ROOT/quarkus-workshop-m1m2-labs
+mvn -q quarkus:add-extension -Dextensions="hibernate-orm-panache, jdbc-h2, jdbc-postgresql" -f $CHE_PROJECTS_ROOT/quarkus-workshop-m1m2-labs
 ----
 
 You should see:
@@ -28,7 +28,6 @@ You should see:
 ----
 ✅ Extension io.quarkus:quarkus-hibernate-orm-panache has been installed
 ✅ Extension io.quarkus:quarkus-jdbc-h2 has been installed
-✅ Extension io.quarkus:quarkus-resteasy-jsonb has been installed
 ✅ Extension io.quarkus:quarkus-jdbc-postgresql has been installed
 ----
 
@@ -38,12 +37,17 @@ The database connection details (JDBC url, database credentials) are specified i
 
 [source,none]
 ----
-%prod.quarkus.datasource.url=jdbc:postgresql://postgres-database:5432/person
-%prod.quarkus.datasource.driver=org.postgresql.Driver
-%dev.quarkus.datasource.url=jdbc:h2:mem:person:default
-%dev.quarkus.datasource.driver=org.h2.Driver
-%test.quarkus.datasource.url=jdbc:h2:mem:person:default
-%test.quarkus.datasource.driver=org.h2.Driver
+%prod.quarkus.datasource.db-kind=postgresql
+%prod.quarkus.datasource.jdbc.url=jdbc:postgresql://postgres-database/person
+%prod.quarkus.datasource.jdbc.driver=org.postgresql.Driver
+
+%dev.quarkus.datasource.db-kind=h2
+%dev.quarkus.datasource.jdbc.url=jdbc:h2:mem:person
+%dev.quarkus.datasource.jdbc.driver=org.h2.Driver
+
+%test.quarkus.datasource.db-kind=h2
+%test.quarkus.datasource.jdbc.url=jdbc:h2:mem:person
+%test.quarkus.datasource.jdbc.driver=org.h2.Driver
 ----
 
 This causes the `%dev` properties (using H2 database) to be active in development (and the `%test` in test mode), and the `%prod` properties (using Postgres) to be used when in production (not in dev or test).
@@ -580,19 +584,6 @@ image::database-deployment.png[inventory_db_deployments, 700]
 == Rebuild and redeploy app
 
 In previous steps we deployed our sample application as a native binary. Now let's switch to a JVM-based deployment from here on out.
-
-Append the following variables in `src/main/resources/application.properties`:
-
-[source,shell,role="copypaste"]
-----
-%prod.quarkus.container-image.build=true<1>
-%prod.quarkus.openshift.labels.app.openshift.io/runtime=quarkus<2>
-%prod.quarkus.s2i.base-jvm-image=registry.access.redhat.com/ubi8/openjdk-11<3>
-----
-
-<1> Instructs the extension to build a container image
-<2> Adds a nice-looking icon to the app when viewing the OpenShift Developer Toplogy
-<3> Build the application based on OpenJDK 11 image
 
 Now let's deploy the application itself. Run the following command which will build and deploy using the OpenShift extension:
 
