--- a/docs/intro.adoc
+++ b/docs/intro.adoc
@@ -56,9 +56,18 @@ To get started, {{ CHE_URL }}[access the CodeReady Workspaces instance^] and log
 
 image::che-login.png[login,400]
 
-Once you log in, you'll be placed on your personal dashboard. We've pre-created workspaces for you to use. Click on the name of the pre-created workspace on the left, as shown below (the name will be different depending on your assigned number). You can also click on the name of the workspace in the center, and then click on the green button that says "OPEN" on the top right hand side of the screen:
+Once you log in, you’ll be placed on your personal dashboard. Click on the name of
+the pre-created workspace on the left, as shown below (the name will be different depending on your assigned number).
 
-image::che-precreated.png[precreated,800]
+image::crw-landing.png[cdw, 700]
+
+You can also click on the name of the workspace in the center, and then click on the green {{ USER_ID}}-namespace that says _Open_ on the top right hand side of the screen:
+
+image::crw-landing-start.png[cdw, 700]
+
+After a minute or two, you’ll be placed in the workspace:
+
+image::che-workspace.png[cdw, 900]
 
 After a minute or two, you'll be placed in the workspace:
 
